style(boundaries): apply spotless tail helpers
Accept the Spotless rewrite in the new visible-scope dependency helpers so the three boundary test suites use  and  for the current scope stack operations.