@@ -1279,7 +1279,7 @@ class AdapterFcpBoundaryTest {
     for (int index = 0; index < text.length(); index++) {
       char current = text.charAt(index);
       char previous = index > 0 ? text.charAt(index - 1) : 0;
-      StringBuilder currentScope = visibleScopes.get(visibleScopes.size() - 1);
+      StringBuilder currentScope = visibleScopes.getLast();
 
       if (inString) {
         currentScope.append(current);
@@ -1304,9 +1304,9 @@ class AdapterFcpBoundaryTest {
 
       if (current == '}') {
         if (visibleScopes.size() > 1) {
-          visibleScopes.remove(visibleScopes.size() - 1);
+          visibleScopes.removeLast();
         }
-        visibleScopes.get(visibleScopes.size() - 1).append(' ');
+        visibleScopes.getLast().append(' ');
         continue;
       }
 
